fix(js-components,react-components): modal z-index (#341)

--- a/workspaces/styles/src/modal.css
+++ b/workspaces/styles/src/modal.css
@@ -3,6 +3,7 @@
   inset: 0;
   background-color: var(--flows-modal-overlayBackground);
   pointer-events: none;
+  z-index: var(--flows-zIndex);
 }
 
 .flows_modal_wrapper {
